--- a/survey_analysis.Rmd
+++ b/survey_analysis.Rmd
@@ -82,8 +82,6 @@ posthocdata <- read.csv("data_prepared/data-post-hoc_prepared.csv")
 posthocdata <- head(posthocdata,-1)
 ```
 
-
-
 ## Descriptive Statistics
 
 ### Participants
@@ -714,4 +712,90 @@ Mean ranks and 95% Nemenyi confidence intervals for three notations (cnl, kv, sc
 
 ### Personal Ranking (preference for a notation)
 
+We are looking at rankings of three notations, hence we cannot use a binomial test but we use a multinomial test.\
+Sources:
 
+- Binomial explained: https://tilburgsciencehub.com/topics/analyze/tests/non-parametric/binomial/\
+- Example for multinomial test: https://search.r-project.org/CRAN/refmans/rstatix/html/multinom_test.html
+
+We collect the data from our counts for 1st places.
+```{r}
+# Data
+notations_ranks <- c(cnl = counts_CNL[2,2], kv = counts_KV[2,2], sc = counts_SC[2,2])
+```
+
+#### Multinomial Test
+
+Hypothesis 2:
+
+- Hn: notations are ranked equally\
+- Ha: there's a difference in ranking 
+```{r}
+res <- multinom_test(notations_ranks)
+res
+
+attr(res, "descriptives")
+
+# Pairwise comparisons between groups
+pairwise_binom_test <- pairwise_binom_test(notations_ranks, p.adjust.method = "bonferroni")
+pairwise_binom_test
+```
+
+Result: Null hypothesis cannot be rejected. Differences in ranking are not significant
+
+#### CI plots
+
+In order to visualize the difference and the (non) significance (results from above suggest no significance from p-value) we use confidence interval plots for the pairwise comparisons. 
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+cnl_kv_lwr_CI <- pairwise_binom_test[["conf.low"]][1]
+cnl_kv_sucess <- pairwise_binom_test[["estimate"]][1][["probability of success"]]
+cnl_kv_upr_CI <- pairwise_binom_test[["conf.high"]][1]
+
+cnl_sc_lwr_CI <- pairwise_binom_test[["conf.low"]][2]
+cnl_sc_sucess <- pairwise_binom_test[["estimate"]][2][["probability of success"]]
+cnl_sc_upr_CI <- pairwise_binom_test[["conf.high"]][2]
+
+kv_sc_lwr_CI <- pairwise_binom_test[["conf.low"]][3]
+kv_sc_sucess <- pairwise_binom_test[["estimate"]][3][["probability of success"]]
+kv_sc_upr_CI <- pairwise_binom_test[["conf.high"]][3]
+
+
+step1_CI=data.frame(contrast="CNL-KV", lower=cnl_kv_lwr_CI, mean=cnl_kv_sucess, upper=cnl_kv_upr_CI)
+step2_CI=data.frame(contrast="CNL-SC", lower=cnl_sc_lwr_CI, mean=cnl_sc_sucess, upper=cnl_sc_upr_CI)
+step3_CI=data.frame(contrast="KV-SC", lower=kv_sc_lwr_CI, mean=kv_sc_sucess, upper=kv_sc_upr_CI)
+
+pairwise_CI <- rbind(step1_CI, step2_CI, step3_CI)
+
+ci_difference_plot <- ggplot(data=pairwise_CI) +
+  geom_bar(aes(x=contrast, y=mean-1/3), stat="identity", fill="lightblue", position = position_nudge(y = 1/3)) +
+  geom_pointrange(mapping=aes(x=contrast, y=mean, ymin=lower, ymax=upper), size=1, color="black", fill="white", shape=22) +
+  geom_hline(yintercept = 1/3, linetype="dotted") +
+  scale_y_continuous(limits=c(0,1)) +
+  coord_flip() +
+  ylab('Probability of success') +
+  xlab('CNL-KV') + 
+  labs(title = "Exact Multinomial Test", subtitle = "95% confidence interval", caption = expression("Note: Line of no effect is 1/3 at hypothesized probability of success (see H2"[null]*" = 1/3).")) + theme_bw() + theme(legend.position="none",
+                                                                                                                                                                                                                         axis.title.x=element_text(size=12),
+                                                                                                                                                                                                                         axis.text.x=element_text(size=12),
+                                                                                                                                                                                                                         axis.title.y=element_blank(),
+                                                                                                                                                                                                                         axis.text.y=element_text(size=12))
+
+# save
+ggsave(file="plots/survey_ranking_ci_difference.svg", plot=ci_difference_plot, width = 8, height = 3)
+ggsave(file="plots/survey_ranking_ci_difference.eps", plot=ci_difference_plot, width = 8, height = 3)
+
+# save as png
+png(filename="plots/survey_ranking_ci_difference.png", width = 1000, height = 300)
+ci_difference_plot
+dev.off()
+
+#print
+#ci_difference_plot
+```
+
+```{r, echo=FALSE, out.width="95%", fig.cap="Figure: plots/survey_ranking_ci_difference.png"}
+knitr::include_graphics("plots/survey_ranking_ci_difference.png")
+```
+
+Result: Non significant differences show that the KV-SC and CNL-SC have an effect, however with no significance.
